roles/k8s/files/base/sandbox/mysql.yaml

apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: sandbox
  labels:
    app: mysql
spec:
  selector:
    app: mysql
    tier: mysql
  ports:
  - protocol: TCP
    port: 3306
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mysql-ingress
  namespace: sandbox
  annotations:
    # rewrite url after /prometheus/xxx -> /xxx for prometheus
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /mysql(/|$)(.*)
        pathType: Prefix
        backend:
          serviceName: mysql
          servicePort: 3306
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: mysql
  namespace: sandbox
  labels:
    app: mysql
spec:
  selector:
    matchLabels:
      app: mysql
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
        tier: mysql
    spec:
      containers:
      - image: mysql:5.7
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
